[gd_scene load_steps=4 format=2]

[ext_resource path="res://recursosInternos/Themes/letra.tres" type="Theme" id=1]
[ext_resource path="res://gameOver/GameOver.gd" type="Script" id=2]
[ext_resource path="res://musica/Sub-Urban-Cradles-NCS-Release.ogg" type="AudioStream" id=3]

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="UI" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contenedor" type="VBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -77.5
margin_right = 168.0
margin_bottom = 77.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reintentar" type="Button" parent="UI/Contenedor"]
margin_right = 336.0
margin_bottom = 49.0
text = "Play again"

[node name="Menu" type="Button" parent="UI/Contenedor"]
margin_top = 53.0
margin_right = 336.0
margin_bottom = 102.0
text = "Back menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitar" type="Button" parent="UI/Contenedor"]
margin_top = 106.0
margin_right = 336.0
margin_bottom = 155.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
[connection signal="button_down" from="UI/Contenedor/Reintentar" to="." method="_on_Reintentar_button_down"]
[connection signal="button_down" from="UI/Contenedor/Menu" to="." method="_on_Menu_button_down"]
[connection signal="button_down" from="UI/Contenedor/Quitar" to="." method="_on_Quitar_button_down"]
